--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,8 +1,8 @@
 <resources>
     <string name="app_name">DanielGithubUsers</string>
     <string name="title_activity_detail_user">DetailUserActivity</string>
-    <string name="tab_text_1">Home</string>
-    <string name="tab_text_2">Profile</string>
+    <string name="tab_text_1">Following</string>
+    <string name="tab_text_2">Followers</string>
     <string name="content_tab_following">Following</string>
     <string name="content_tab_follower">Follower</string>
     <string name="not_found">Not found</string>
